--- a/src/app/components/cards/cards-pricing/cards-pricing.component.css
+++ b/src/app/components/cards/cards-pricing/cards-pricing.component.css
@@ -2,13 +2,13 @@
     position: absolute;
     bottom: 0px;
     left: 0px;
-
+    right: 0px;
 
     display: flex;
     flex-direction: column;
 
     width: 100%;
-    height: 60px;
+    height: 50px;
     background-color: rgba(0, 0, 0, 0.8);
     padding: 10px;
     color: antiquewhite;
@@ -22,8 +22,8 @@
 .card-pricing__value{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-
+    justify-content: space-between;
+    width: 90%;
 }
 .card-pricing__value__console{
     display: flex;
@@ -32,5 +32,5 @@
 .card-pricing__value__console > span{
     font-weight: bolder; 
     color: aqua;
-    margin-right: 10px;
+    margin-right: 5px;
 }
